src/objects/MRI_Volume__c.object
<CustomObject>
    <fields>
        <fullName>ACRIN_ID__c</fullName>
        <label>ACRIN ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalURL__c</fullName>
        <label>ApprovalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>MRI Volumes</relationshipLabel>
        <relationshipName>MRI_Volumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Laterality__c</fullName>
        <description>Select the laterality of the study breast that is being reported.</description>
        <inlineHelpText>Select the laterality of the study breast that is being reported.</inlineHelpText>
        <label>Laterality</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_in_O_clock__c</fullName>
        <label>Location (in O&apos;clock)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Longest_Diameter_Of_Index_Lesion_in_cm__c</fullName>
        <label>Longest Diameter Of Index Lesion (in cm)</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRI_Longest_Diameter_time_point_1_Snomed__c</fullName>
        <label>MRI Longest Diameter time point 1 Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRI_Scan_Date__c</fullName>
        <description>Date of MRI scan.</description>
        <inlineHelpText>Date of MRI scan.</inlineHelpText>
        <label>MRI Scan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MRI_Volume_in_cm3__c</fullName>
        <label>MRI Volume (in cm3)</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>MRI_Volume__c</referenceTo>
        <relationshipLabel>MRI Volumes</relationshipLabel>
        <relationshipName>MRI_Volumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient_Custom__c</referenceTo>
        <relationshipLabel>MRI Volumes</relationshipLabel>
        <relationshipName>MRI_Volumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pg_Status__c</fullName>
        <label>Pg_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seprate_masses_or_enhancements_reported__c</fullName>
        <description>Other than the index lesion, Are separate masses or enhancements reported?</description>
        <inlineHelpText>Other than the index lesion, Are separate masses or enhancements reported?</inlineHelpText>
        <label>Separate masses/Enhancements reported?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is sign and submitting the record</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MRI_Volumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_2_Location_in_O_clock__c</fullName>
        <label>Target 2 Location (in O&apos;clock)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_2_Longest_Diameter_in_cm__c</fullName>
        <label>Target 2 Longest Diameter (in cm)</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_3_Location_in_O_clock__c</fullName>
        <label>Target 3 Location (in O&apos;clock)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_3_Longest_Diameter_in_cm__c</fullName>
        <label>Target 3 Longest Diameter (in cm)</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_4_Location_in_O_clock__c</fullName>
        <label>Target 4 Location (in O&apos;clock)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_4_Longest_Diameter_in_cm__c</fullName>
        <label>Target 4 Longest Diameter (in cm)</label>
        <precision>15</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Point_Snomed__c</fullName>
        <label>Time Point Snomed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Point__c</fullName>
        <label>Time Point</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Regimen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Surgery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trial Patient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>MRI Volumes CRF</relationshipLabel>
        <relationshipName>MRI_Volumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Was_MRI_Readable__c</fullName>
        <label>Was MRI Readable?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pg_MRIVolume_Id__c</fullName>
        <label>pg_MRIVolume_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>MRI Volume</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>MRI Volume Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRI Volumes</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACRIN_Is_Not_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( OR( ISPICKVAL( Time_Point__c , &apos;Inter-Regimen&apos;), ISPICKVAL( Time_Point__c , &apos;Pre-Surgery&apos;) ),  NOT(ISBLANK( ACRIN_ID__c ) ) )</errorConditionFormula>
        <errorMessage>Please leave the ACRIN ID field blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACRIN_Is_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR( ISPICKVAL(Time_Point__c , &apos;Pre-Treatment&apos;) , ISPICKVAL(Time_Point__c , &apos;Early Treatment&apos;)), ISBLANK( ACRIN_ID__c ))</errorConditionFormula>
        <errorMessage>Please enter your ACRIN ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MRI_Scan_Date_Should_Not_Be_In_Future</fullName>
        <active>true</active>
        <errorConditionFormula>MRI_Scan_Date__c   &gt;   TODAY()</errorConditionFormula>
        <errorDisplayField>MRI_Scan_Date__c</errorDisplayField>
        <errorMessage>Date shouldn&apos;t be in future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MRI_Scan_Is_Done</fullName>
        <active>false</active>
        <errorConditionFormula>AND( TrialPatient__r.Site__r.ACRIN_6693_MRS_Participant__c =true,  OR( ISPICKVAL( Time_Point__c , &apos;Pre-Treatment&apos;), ISPICKVAL( Time_Point__c , &apos;Early Treatment&apos;) ), ISBLANK( ACRIN_ID__c )  )</errorConditionFormula>
        <errorMessage>Please enter your ACRIN ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MRI_Scan_Not_Done</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  TrialPatient__r.Site__r.ACRIN_6693_MRS_Participant__c  =false,   NOT(ISBLANK( ACRIN_ID__c ) ) )</errorConditionFormula>
        <errorMessage>Please leave the ACRIN ID field blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MRI_Volume_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Time_Point__c, &apos;Pre-Treatment&apos;)  &amp;&amp;  ISNULL(MRI_Volume_in_cm3__c)</errorConditionFormula>
        <errorDisplayField>MRI_Volume_in_cm3__c</errorDisplayField>
        <errorMessage>Please enter value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MRI_Volume_Should_Be_Greater_Than_0</fullName>
        <active>true</active>
        <errorConditionFormula>MRI_Volume_in_cm3__c &lt;0</errorConditionFormula>
        <errorDisplayField>MRI_Volume_in_cm3__c</errorDisplayField>
        <errorMessage>MRI Volume should be greater then 0</errorMessage>
    </validationRules>
</CustomObject>